--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ oauthlib==0.7.2
 pyasn1==0.1.7
 pyasn1-modules==0.0.5
 PyJWT==0.4.1
-pywapi==0.3.8
+pywapi==0.3.8 --allow-unverified pywapi
 requests==2.5.1
 rsa==3.1.4
 six==1.9.0
