--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
+aniso8601==0.92
 boto==2.35.2
 facebook-sdk==0.4.0
 Flask==0.10.1
+Flask-API==0.6.2
 Flask-Bootstrap==3.3.0.1
 Flask-Cache==0.13.1
 Flask-Login==0.2.11
 Flask-Menu==0.2.0
+Flask-RESTful==0.3.1
 Flask-Stormpath==0.3.1
 Flask-WTF==0.11
 gunicorn==19.1.1
@@ -12,11 +15,13 @@ httplib2==0.9
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
+mohawk==0.2.2
 oauth2client==1.4.6
 oauthlib==0.7.2
 pyasn1==0.1.7
 pyasn1-modules==0.0.5
 PyJWT==0.4.1
+pytz==2014.10
 --allow-external pywapi
 --allow-unverified pywapi
 pywapi==0.3.8
