--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask==0.10.1
 Flask-API==0.6.2
 Flask-Bootstrap==3.3.0.1
 Flask-Cache==0.13.1
+Flask-Cors==1.10.2
 Flask-Login==0.2.11
 Flask-Menu==0.2.0
 Flask-RESTful==0.3.1
