--- a/requirements.txt
+++ b/requirements.txt
@@ -19,9 +19,11 @@ MarkupSafe==0.23
 mohawk==0.2.2
 oauth2client==1.4.6
 oauthlib==0.7.2
+py==1.4.26
 pyasn1==0.1.7
 pyasn1-modules==0.0.5
 PyJWT==0.4.1
+pytest==2.6.4
 pytz==2014.10
 --allow-external pywapi
 --allow-unverified pywapi
