--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,35 @@
-aniso8601==0.92
-boto==2.36.0
-facebook-sdk==0.4.0
-Flask==0.10.1
-Flask-API==0.6.2
-Flask-Bootstrap==3.3.0.1
-Flask-Cache==0.13.1
-Flask-Cors==1.10.3
-Flask-Login==0.2.11
-Flask-Menu==0.2.0
-Flask-RESTful==0.3.1
-Flask-Stormpath==0.3.1
-Flask-WTF==0.11
-gunicorn==19.2.1
-httplib2==0.9
-itsdangerous==0.24
-Jinja2==2.7.3
-MarkupSafe==0.23
-mohawk==0.2.2
-oauth2client==1.4.6
-oauthlib==0.7.2
-py==1.4.26
-pyasn1==0.1.7
-pyasn1-modules==0.0.5
-PyJWT==0.4.3
-pytest==2.6.4
-pytz==2014.10
---allow-external pywapi
---allow-unverified pywapi
-pywapi==0.3.8
-PyYAML==3.11
-requests==2.5.1
-rsa==3.1.4
-six==1.9.0
-stormpath==1.3.0
-Werkzeug==0.10.1
-WTForms==2.0.2
-twilio==4.6.0
+aniso8601
+boto
+Flask
+Flask-API
+Flask-Bootstrap
+Flask-Cache
+Flask-Cors
+Flask-Login
+Flask-Menu
+Flask-RESTful
+Flask-Stormpath
+Flask-WTF
+gunicorn
+httplib2
+itsdangerous
+Jinja2
+MarkupSafe
+mohawk
+oauth2client
+oauthlib
+py
+pyasn1
+pyasn1-modules
+PyJWT
+pytest
+pytz
+requests
+rsa
+stormpath
+Werkzeug
+WTForms
+twilio
 elasticsearch>=1.0.0,<2.0.0
 certifi
 
